@@ -1,4 +1,5 @@
 0.17
+ - Fix stations on multiple lines (GH#2).
  - Update copyright years.
 
 0.16 2023-12-09T10:57:12+01:00
